# shurl

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
cacher/: Dockerfile  main.py  requirements.txt
redirector/: Dockerfile  main.py  requirements.txt
redirector/app/: __init__.py  db.py
reference/: async_communication_approach.md  distribured_databases.md  load_testing.md  load_testing_stats.md
shurl/: Dockerfile  __init__.py  db.py  exceptions.py  main.py  requirements.txt  token_generator.py
shurl/app/: __init__.py  db.py  exceptions.py  main.py  token_generator.py
shurl/grpc/: client.py  readme.md  run.sh  server.py
shurl/grpc/definitions/: service.proto
shurl/grpc/tests/: conftest.py  test_grpc.py
shurl/models/: __init__.py  item.py  url.py
tests/: conftest.py  locustfile.py  test_api.py  test_db.py  test_redis_integration.py  test_token_generator.py
