[tool.poetry]
name = "shurl"
version = "0.1.0"
description = "Url shortener"
authors = ["pacificus <masterkristall@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pymongo = "^4.2.0"
pytest = "^7.1.3"
mongomock = "^4.1.2"
locust = "^2.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 70
target-version = ['py37']
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | dist
  | docs
)/
'''

[tool.isort]
profile = 'black'
src_paths = ['deployme', 'tests']
line_length = 70
lines_after_imports = 2
force_single_line = 'True'
force_sort_within_sections = 'True'
order_by_type = 'False'